test/programs/good/typechecker/reset_1.lq
main :: Qbit
main = reset (new @1)
