test/programs/bad/typechecker/reset_1.lq
main :: Bit
main = reset (new @1)
